<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/view_login_background"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/already_have_account"
        android:src="@drawable/icon_parking_blue" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="50dp"
        android:background="@color/input_blue"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/login_icon_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/icon_login_mobile" />

        <TextView
            android:id="@+id/login_title_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/login_icon_phone"
            android:text="@string/phone_number"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/login_edit_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/login_title_phone"
            android:ems="10"
            android:inputType="phone"
            android:textColor="@color/white" >

            <requestFocus />
        </EditText>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/login_code_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:background="@color/input_blue"
        android:padding="10dp"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/login_icon_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/icon_login_code" />

        <TextView
            android:id="@+id/login_title_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/login_icon_code"
            android:text="@string/auth_code"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/login_edit_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/login_title_code"
            android:ems="3"
            android:inputType="phone"
            android:maxLength="4"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/login_btn_send_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@attr/actionDistance"
            android:background="@color/alpha_white"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/send_auth_code"
            android:textColor="@color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:background="@color/input_blue"
        android:padding="10dp" >

        <ImageView
            android:id="@+id/login_icon_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/icon_login_password" />

        <TextView
            android:id="@+id/login_title_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/login_icon_password"
            android:text="@string/password"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/login_edit_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/login_title_password"
            android:ems="10"
            android:inputType="phone"
            android:textColor="@color/white" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/login_tos_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:visibility="invisible" >

        <CheckBox
            android:id="@+id/login_btn_tos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/regist_black" />

        <TextView
            android:id="@+id/login_btn_tos_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tos"
            android:textColor="@color/regist_black" />

    </LinearLayout>

    <TextView
        android:id="@+id/login_btn_ok"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="10dp"
        android:background="@color/regist_btn"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/login"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/login_btn_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/enter_regist" />

</LinearLayout>